quality code hibernate query