@@ -1,6 +1,5 @@
 package com.rte_france.antares.datamanager_back.service;
 
-import com.rte_france.antares.datamanager_back.dto.TrajectoryType;
 import com.rte_france.antares.datamanager_back.dto.WarningDTO;
 import com.rte_france.antares.datamanager_back.exception.BusinessException;
 import com.rte_france.antares.datamanager_back.repository.StudyRepository;
@@ -99,15 +98,15 @@ class WarningMessageServiceImplTest {
         // Given
         Integer trajectoryId = 1;
         Integer studyId = 1;
-        when(warningRepository.findByTrajectoryTypeAndStudyId(any(), any()))
+        when(trajectoryRepository.findAllByIdWithWarnings(List.of(trajectoryId)))
                 .thenReturn(Collections.emptySet());
 
         // When
-        Set<WarningDTO> result = warningService.getWarningsForTrajectory(studyId, TrajectoryType.AREA);
+        Set<WarningDTO> result = warningService.getWarningsForTrajectory(trajectoryId, studyId);
 
         // Then
         assertTrue(result.isEmpty());
-        verify(warningRepository).findByTrajectoryTypeAndStudyId(studyId, TrajectoryType.AREA.name());
+        verify(trajectoryRepository).findAllByIdWithWarnings(List.of(trajectoryId));
     }
 
     @Test
@@ -120,20 +119,21 @@ class WarningMessageServiceImplTest {
                 .warningMessages(null)
                 .build();
 
-        when(warningRepository.findByTrajectoryTypeAndStudyId(any(), any()))
-                .thenReturn(Collections.emptySet());
+        when(trajectoryRepository.findAllByIdWithWarnings(List.of(trajectoryId)))
+                .thenReturn(Set.of(trajectory));
 
         // When
-        Set<WarningDTO> result = warningService.getWarningsForTrajectory(studyId, TrajectoryType.AREA);
+        Set<WarningDTO> result = warningService.getWarningsForTrajectory(trajectoryId, studyId);
 
         // Then
         assertTrue(result.isEmpty());
-        verify(warningRepository).findByTrajectoryTypeAndStudyId(studyId, TrajectoryType.AREA.name());
+        verify(trajectoryRepository).findAllByIdWithWarnings(List.of(trajectoryId));
     }
 
     @Test
     void getWarningsForTrajectory_shouldReturnWarnings_whenWarningsExist() {
         // Given
+        Integer trajectoryId = 1;
         Integer studyId = 1;
         StudyEntity study = StudyEntity.builder().id(studyId).build();
         WarningMessageEntity warning = WarningMessageEntity.builder()
@@ -143,16 +143,20 @@ class WarningMessageServiceImplTest {
                 .warningCode(WarningCode.LOAD_MISSING_TRAJECTORY_FOR_AREAS)
                 .creationDate(LocalDateTime.now())
                 .createdBy("testUser")
-                .trajectory(TrajectoryEntity.builder().id(1).type(TrajectoryType.AREA.name()).build())
                 .study(study)
                 .isAck(false)
                 .build();
 
-        when(warningRepository.findByTrajectoryTypeAndStudyId(studyId, TrajectoryType.AREA.name()))
-                .thenReturn(Set.of(warning));
+        TrajectoryEntity trajectory = TrajectoryEntity.builder()
+                .id(trajectoryId)
+                .warningMessages(Set.of(warning))
+                .build();
+
+        when(trajectoryRepository.findAllByIdWithWarnings(List.of(trajectoryId)))
+                .thenReturn(Set.of(trajectory));
 
         // When
-        Set<WarningDTO> result = warningService.getWarningsForTrajectory(studyId, TrajectoryType.AREA);
+        Set<WarningDTO> result = warningService.getWarningsForTrajectory(trajectoryId, studyId);
 
         // Then
         assertFalse(result.isEmpty());
@@ -166,7 +170,7 @@ class WarningMessageServiceImplTest {
         assertEquals(warning.getCreatedBy(), warningDTO.getGeneratedBy());
         assertEquals(warning.getIsAck(), warningDTO.getIsAck());
 
-        verify(warningRepository).findByTrajectoryTypeAndStudyId(studyId, TrajectoryType.AREA.name());
+        verify(trajectoryRepository).findAllByIdWithWarnings(List.of(trajectoryId));
     }
 
     @Test
